istio-1.22.2/samples/ambient-argo/lab-ambient/destinationrule-l7.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: productpage-dr
  namespace: bookinfo-lab
spec:
  host: productpage.bookinfo-lab.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
